@@ -5,7 +5,6 @@ feedparser
 bs4
 readability-lxml
 lxml-html-clean
-pillow
 setproctitle
 timg
 file
